adding some css

--- a/app/public/home.html
+++ b/app/public/home.html
@@ -1,14 +1,15 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Find your perfect partner from the show "F.R.I.E.N.D.S"</title>
+	<title>Find your perfect partner from the Game of Thrones</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	
 </head>
 <body class="site">
 	<div class="container content">
-		<h1>Who is your F.R.I.E.N.D.S' soulmate? </h1>
-		<p>Welcome to the test that reveals who is your best match based on characters of the best sitcom ever created "F.R.I.E.N.D.S"</p>
+		<h1>Who is your GOT soulmate? </h1>
+		<p> "When you play the game of thrones, you either win or you die"<br>
+		Cersai Lannister</p>
 		
 	</div>
 
