updated css home and survey again

--- a/app/public/home.html
+++ b/app/public/home.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Find your perfect partner from the Game of Thrones</title>
+	<title>Find your perfect partner from Game of Thrones</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	
 </head>
