--- a/app/public/survey.html
+++ b/app/public/survey.html
@@ -1,14 +1,14 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Find your perfect partner from the show "F.R.I.E.N.D.S"</title>
+	<title>Find your perfect partner from Game of Thrones</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	
 </head>
 <body>
 	<div class="container content">
 		<h1>Survey</h1>
-		<p>Take a quick survey to find your perfect match! These questions are answered by the numbers 1 through 5. If you really, really disagree with the statement, your answer would be 1. If you find a statement to hit extremely close to home, put in a 5.</p>
+		<p>Take this quick survey to find your perfect match! These questions are answered by the numbers 1 through 5. Enter 1 if you are not passionate about a question. Enter 5 If you are extremely passionate about a question.</p>
 		<form>
 			<div class="form-group">
 				<input id="name" type="text" class="form-control" placeholder="Name (Required)">
@@ -17,7 +17,7 @@
 				<input id="photo" type="text" class="form-control" placeholder="Link to Profile Photo (Required)">
 			</div>
 			<div class="form-group">
-				<label for="question1">I like to spend my free time talking to my friends.</label>
+				<label for="question1">Must love dogs.</label>
 				<select class="form-control" id="question1">
 					<option value="empty"></option>
 					<option value="1">1</option>
@@ -28,7 +28,7 @@
 				</select>
 			</div>
 			<div class="form-group">
-				<label for="question2">I cannot live without a cup of coffee</label>
+				<label for="question2">Family is the most important thing to me.</label>
 				<select class="form-control" id="question2">
 					<option value="empty"></option>
 					<option value="1">1</option>
@@ -39,7 +39,7 @@
 				</select>
 			</div>
 			<div class="form-group">
-				<label for="question3">I love going to the movies</label>
+				<label for="question3">Supportive of the 2nd Amendment.</label>
 				<select class="form-control" id="question3">
 					<option value="empty"></option>
 					<option value="1">1</option>
@@ -50,7 +50,7 @@
 				</select>
 			</div>
 			<div class="form-group">
-				<label for="question4">I consider my friends to be a very important part of my life.</label>
+				<label for="question4">Must love wine.</label>
 				<select class="form-control" id="question4">
 					<option value="empty"></option>
 					<option value="1">1</option>
@@ -61,7 +61,7 @@
 				</select>
 			</div>
 			<div class="form-group">
-				<label for="question5">I like to visit museums.</label>
+				<label for="question5">I hate winter.</label>
 				<select class="form-control" id="question5">
 					<option value="empty"></option>
 					<option value="1">1</option>
@@ -72,7 +72,7 @@
 				</select>
 			</div>
 			<div class="form-group">
-				<label for="question6">I like to play boardgames.</label>
+				<label for="question6">Will travel by horse.</label>
 				<select class="form-control" id="question6">
 					<option value="empty"></option>
 					<option value="1">1</option>
@@ -83,7 +83,7 @@
 				</select>
 			</div>
 			<div class="form-group">
-				<label for="question7">I enjoy playing with animals</label>
+				<label for="question7">I am extremely loyal.</label>
 				<select class="form-control" id="question7">
 					<option value="empty"></option>
 					<option value="1">1</option>
@@ -94,7 +94,7 @@
 				</select>
 			</div>
 			<div class="form-group">
-				<label for="question8">I am a clean freak.</label>
+				<label for="question8">I will always fight for what is right.</label>
 				<select class="form-control" id="question8">
 					<option value="empty"></option>
 					<option value="1">1</option>
@@ -105,7 +105,7 @@
 				</select>
 			</div>
 			<div class="form-group">
-				<label for="question9">I work out at the gym often.</label>
+				<label for="question9">I am educated.</label>
 				<select class="form-control" id="question9">
 					<option value="empty"></option>
 					<option value="1">1</option>
@@ -116,7 +116,7 @@
 				</select>
 			</div>
 			<div class="form-group">
-				<label for="question10">I consider myself aggressive.</label>
+				<label for="question10">I would like to run for office.</label>
 				<select class="form-control" id="question10">
 					<option value="empty"></option>
 					<option value="1">1</option>
