--- a/app/public/home.html
+++ b/app/public/home.html
@@ -3,7 +3,10 @@
 <head>
 	<title>Find your perfect partner from Game of Thrones</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	
+	<link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+	<link rel="stylesheet" type="text/css" href="/css/style.css">
+	<link href="https://fonts.googleapis.com/css?family=Courgette&display=swap" rel="stylesheet">
+
 </head>
 <body class="site">
 	<div class="container content">
@@ -11,11 +14,18 @@
 		<p> "When you play the game of thrones, you either win or you die"<br>
 		Cersai Lannister</p>
 		
+		<div class="text-center">
+			<a href="/survey"><button class="btn btn-lg btn-success">Take Survey</button></a>
+		</div>
+
 	</div>
 
 	<footer>
 		<div class="container">
-			
+			<a href="/api/friends">Discover Your Soulmate</a>
+			<span>|</span>
+			<a href= "https://jldueyusa.github.io/FriendFinder">GitHub Repo</a>
+
 		</div>
 	</footer>
 
@@ -23,5 +33,6 @@
 	  src="https://code.jquery.com/jquery-3.2.1.min.js"
 	  integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4="
 	  crossorigin="anonymous"></script>
+	  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 </body>
 </html>
