--- a/app/public/survey.html
+++ b/app/public/survey.html
@@ -3,7 +3,11 @@
 <head>
 	<title>Find your perfect partner from Game of Thrones</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	
+	<link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+	<!-- Link static CSS -->
+	<link rel="stylesheet" type="text/css" href="/css/style.css">
+	<link href="https://fonts.googleapis.com/css?family=Courgette&display=swap" rel="stylesheet">
+
 </head>
 <body>
 	<div class="container content">
@@ -155,10 +159,60 @@
 		
 	</footer>
 
-	<script
-	  src="https://code.jquery.com/jquery-3.2.1.min.js"
-	  integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4="
-	  crossorigin="anonymous"></script>
-	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+	<div class="container">
+		<a href="/api/friends">Discover Your Soulmate</a>
+		<span>|</span>
+		<a href="https://github.com/dstl21/friendFinder">GitHub Repo</a>
+	</div>
+</footer>
+
+<script
+  src="https://code.jquery.com/jquery-3.2.1.min.js"
+  integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4="
+  crossorigin="anonymous"></script>
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 </body>
 </html>
+
+<script type="text/javascript">
+$("#submitBtn").on("click", function(event) {
+	event.preventDefault();
+	// Form validation
+	let valid = true;
+	if($("#name").val() === "" || $("#photo").val() === "") {
+		valid = false;
+	} else if($("#question1").val() === "empty" || $("#question2").val() === "empty" || $("#question3").val() === "empty" || $("#question4").val() === "empty" || $("#question5").val() === "empty" || $("#question6").val() === "empty" || $("#question7").val() === "empty" || $("#question8").val() === "empty" || $("#question9").val() === "empty" || $("#question10").val() === "empty") {
+		valid = false;
+	}
+	if(valid === true) {
+		let newUser = {
+			name: $("#name").val().trim(),
+			photo: $("#photo").val().trim(),
+			scores: [
+				$("#question1").val(),
+				$("#question2").val(),
+				$("#question3").val(),
+				$("#question4").val(),
+				$("#question5").val(),
+				$("#question6").val(),
+				$("#question7").val(),
+				$("#question8").val(),
+				$("#question9").val(),
+				$("#question10").val()
+			]
+		};
+		console.log("newuser:", newUser);
+		let currentURL = window.location.origin;
+		// Ajax call for receiving response after POST req
+		$.post(currentURL + "/api/friends", newUser, function(data) {
+			console.log("data:", data)
+			$("#soulmate").text(data.name);
+			$("#soulmatePhoto").attr("src", data.photo);
+			$("#soulmateModal").modal("toggle");
+		});
+	} else {
+		// If a required field is missing, show alert
+		alert("Survey is incomplete!");
+	}
+});
+</script>
