updated images not using google image and text

--- a/app/public/home.html
+++ b/app/public/home.html
@@ -10,9 +10,10 @@
 </head>
 <body class="site">
 	<div class="container content">
-		<h1>Who is your GOT soulmate? </h1>
+		<h1>Who is your Game of Thrones partner? </h1>
 		<p> "When you play the game of thrones, you either win or you die"<br>
 		Cersai Lannister</p>
+		<img src="https://cdn.images.express.co.uk/img/dynamic/galleries/x701/264417.jpg" alt = "Cersei" style="width:25%;height:25%;border:0;" ><br>
 		
 		<div class="text-center">
 			<a href="/survey"><button class="btn btn-lg btn-success">Take Survey</button></a>
@@ -22,9 +23,9 @@
 
 	<footer>
 		<div class="container">
-			<a href="/api/friends">Discover Your Soulmate</a>
+			<a href="/api/friends">Discover Your Game of Thrones Partner</a>
 			<span>|</span>
-			<a href= "https://jldueyusa.github.io/FriendFinder">GitHub Repo</a>
+			<a href= "https://github.com/jldueyusa/FriendFinder">GitHub Repo</a>
 
 		</div>
 	</footer>
