--- a/app/public/survey.html
+++ b/app/public/survey.html
@@ -160,9 +160,9 @@
 	</footer>
 
 	<div class="container">
-		<a href="/api/friends">Discover Your Soulmate</a>
+		<a href="/api/friends">Discover Your Game of Thrones Partner</a>
 		<span>|</span>
-		<a href="https://github.com/dstl21/friendFinder">GitHub Repo</a>
+		<a href="https://github.com/jldueyusa/FriendFinder">GitHub Repo</a>
 	</div>
 </footer>
 
