--- a/app/public/home.html
+++ b/app/public/home.html
@@ -5,18 +5,18 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
 	<link rel="stylesheet" type="text/css" href="/css/style.css">
-	<link href="https://fonts.googleapis.com/css?family=Courgette&display=swap" rel="stylesheet">
+	
 
 </head>
 <body class="site">
 	<div class="container content">
-		<h1>Who is your Game of Thrones partner? </h1>
+		<h1>Who Is Your Game of Thrones Partner? </h1>
 		<p> "When you play the game of thrones, you either win or you die"<br>
 		Cersai Lannister</p>
 		<img src="https://cdn.images.express.co.uk/img/dynamic/galleries/x701/264417.jpg" alt = "Cersei" style="width:25%;height:25%;border:0;" ><br>
 		
 		<div class="text-center">
-			<a href="/survey"><button class="btn btn-lg btn-success">Take Survey</button></a>
+			<a href="/survey"><button class="btn btn-secondary btn-lg">Take Survey</button></a>
 		</div>
 
 	</div>
