--- a/app/public/survey.html
+++ b/app/public/survey.html
@@ -15,7 +15,7 @@
 		
 		<h1>Survey</h1>
 		<p>Take this quick survey to find your perfect match! These questions are answered by the numbers 1 through 5. Enter 1 if you are not passionate about a question. Enter 5 If you are extremely passionate about a question.</p>
-		
+	
 		<form>
 			<div class="form-group">
 				<input id="name" type="text" class="form-control" placeholder="Name (Required)">
@@ -24,7 +24,7 @@
 				<input id="photo" type="text" class="form-control" placeholder="Link to Profile Photo (Required)">
 			</div>
 			<div class="form-group">
-				<label class='required' for="question1">Must love dogs.</label>
+				<label for="question1">Must love dogs.</label>
 				<select class="form-control" id="question1">
 					<option value="empty"></option>
 					<option value="1">1</option>
